--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Cadastro</title>
 </head>
+
 <body>
-    <h1>Cadastro</h1>
-    <form action="#" method="post">
+    <h1>Formulário de Cadastro</h1>
+
+    <form>
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required><br><br>
+        <input type="text" id="nome" name="nome" required>
+        <br><br>
 
         <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="email" name="email" required>
+        <br><br>
 
         <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required><br><br>
-
+        <input type="password" id="senha" name="senha" required>
+        
+        <br><br>
         <button type="submit">Cadastrar</button>
+
     </form>
 </body>
 </html>
